Portfolio/css/style.css
/*-----MAIN-----*/
html {
  box-sizing: border-box;
}
html, body{
	height: 100%;
}
/*skip content*/
.skip{
	position: absolute;
	left: -999px;
	top: auto;
	width: 1px;
	height: 1px;
	overflow: hidden;
	z-index: -999;
	color: #E3AD02;
}
a.skip:active, a.skip:focus, a.skip:hover {
    position:fixed;
    top: auto;
    left: auto;
	width: auto;
	height: auto;
	overflow: visible;
	z-index: 999;
}
html, body, header, footer{
    background-color: #000000;
    font-family: 'Open Sans', sans-serif;
    margin: 0;
    padding: 0;
}
header, footer, .logo {
	background-color: #000000;
	color: #000000;
}
body{
	display: flex;
	flex-direction: column;
}
h1, h2, h3, h4, h5, h6{
	font-family: 'Quicksand', sans-serif;
}
p{
	font-family: 'Open Sans', sans-serif;
}
h1{
	font-size: 2.75em;
}
h2{
	font-size: 1.5em;
  margin: auto;
}
h3{
	font-size: 1.17em;
}
h4{
	font-size: 1.12em;
}
h5{
	font-size: .83em;
}
h6{
	font-size: .75em;
}
.main-content{
	flex: 1 0 auto;
	margin-top: 110px;
}
.about, .work, .crafts, .contact{
	/* margin: auto; */
	padding-right: 3%;
	padding-left: 3%;
}

/*-----HEADER & NAVIGATION-----*/
header{
	font-family: 'Quicksand', sans-serif;
	font-size: 105%;
    box-shadow: 0px 18px 26px 1px rgba(141, 141, 139, .75);
    width: 100%;
    position: fixed;
}
/*mobile-first*/
.top-nav ul{
	list-style-type: none;
	padding: 0;
	background-color: #000000; /*CHANGE*/
	margin: 0;
	display: none;
}
.top-nav ul li, .menu-icon{
	border-top: 1px solid #DDDDDA; /*CHANGE*/
}
.top-nav ul li a{
	font-size: 1em;
	color: #DDDDDA; /*CHANGE*/
	text-decoration: none;
	padding: .5em 1em;
	display: block;
	text-align: center;
}
.menu-icon a{
	font-size: 1em;
	color: #DDDDDA; /*CHANGE*/
	text-decoration: none;
	padding: .5em 1em;
	display: block;
	text-align: center;
}
.top-nav ul li a.current-page{
	color: 	#FF69B4;
	font-weight: bold;
}
.top-nav ul li a.current-page:before {
  content: "\2665  ";
  color: #FF69B4;
  padding-right: 4px;
  position: relative;
  top: 1px;
}
.menu-icon a:hover{
    background-color: #000000;
    color: #FF1493;
    font-weight: bold;
}
.top-nav ul li a:hover, .top-nav ul li a:focus{
    background-color: #000000;
    color: #07fcfc;
    font-weight: bold;
}
.top-nav ul li a:hover:before, .top-nav ul li a:focus:before{
    content: "\2665  ";
  	color: #07fcfc;
  	padding-right: 4px;
  	position: relative;
  	top: 1px;
}
/*implement menu toogle*/
.top-nav.toggle-open ul{
	display: block;
}

/*-----LOGO-----*/
.logo{
	background-color: #000000; /*CHANGE*/
	margin: 0;
	text-align: center;
	padding: .25em .75em;
}
.logo img{
	height: 3em;
}

/*-----FOOTER-----*/
footer{
	color: 	#FFFFFF;
	font-size: .85em;
	text-align: center;
	box-shadow: 0px -10px 30px 2px rgba(141, 141, 139, .75);
}
footer p{
	padding-top: .5em;
	padding-bottom: .75em;
}
/*social media icons*/
/*.fa {
    font-size: 1em;
    padding: .5em .25em 0;
    text-align: justify;
    text-decoration: none;
    border-radius: 50%;
    color: #DDDDDA;
}
.fa:hover, .fa:focus{
	color: #E3AD02;
}*/
.icon{
	padding: .5em .25em 0;
	height: 25px;
}

/*-----HOMEPAGE-----*/
.body-home{
  background-color: #000000;
  background-image: url("../img/spotlight.jpg");
	background-size: cover;
	background-position: center top;
	/* background-repeat: no-repeat; */
}
.main-content-home{
	margin-top: 100px;
}
.home-flag{
	background-color: #FF69B4;
  background-size: contain;
  text-align: center;
	display: flex;
	flex-direction: column;
	max-width: 500px;
	margin: auto;
	padding: 1.5em;
	box-shadow: 0px 8px 10px gray, -10px 8px 15px gray, 10px 8px 15px gray;
}
#my-name, p{
	margin: 0;
	padding: 0;
  padding-top: 0.35em;
}
#my-name span.first{
	font-family: "Pinyon Script", cursive;
  font-size: 1em;
}
#my-name span.last{
  font-family: "Great Vibes";
  font-size: 0.9em;
}
#university{
	font-family: "Quicksand", sans-serif;
	font-size: 1.5em;
	font-weight: lighter;
  padding-top: 0.5em;
  padding-bottom: 0.15em;
}
#school{
	font-family: "Quicksand", sans-serif;
	font-size: 1em;
	font-style: italic;
	/* padding: .75em 0; */
}

/*-----ABOUT PAGE-----*/
.resp-image{ /*also photo gallery*/
	max-width: 35%;
}
.img-container{
  text-align: center;
}
.img-container img{
	/* width: 25%;
	margin: 10%;
  position: fixed;
	display: block; */
  /* margin-left: auto;
	margin-right: auto;
	display: block;
	box-shadow: 0px 0px 10px rgba(141, 141, 139, .75); */
  background-size: contain;
  /* text-align: center;
	display: flex;
	flex-direction: column; */
	max-width: 35%;
	/* padding: 1.5em; */
  /* position: absolute;
  left: 50%;
  margin-left: -100px; */
	/* box-shadow: 0px 8px 10px gray, -10px 8px 15px gray, 10px 8px 15px gray; */
}
.aboutme-container{
  background: rgba(249, 182, 241, 0.9);
  text-align: center;
	width: 98%;
  box-shadow: 0px 8px 10px hotpink, -10px 8px 15px hotpink, 10px 8px 15px hotpink, 0px -8px 10px hotpink;
	margin-top: 0;
	margin-bottom: 3%;
}
.aboutme-container h1{
	font-family: 'Pinyon Script', cursive;
  color: #808080;
  margin-top: 42px;
}
.aboutme-container img{
  max-width: 35%;
  margin-top: 5px;
}
.aboutme-container h2{
	max-width: 500px;
  font-family: 'Pinyon Script', cursive;
  color: #808080;
  text-align: center;
  margin-top: 25px;
}
.aboutme-container p{
  padding: 1em;
}
.aboutme-container ul{
  text-align:center;
  list-style-position: inside;
  margin: auto;
  padding: 5px 0 0 0;
}
.resume-pdf {
    width: 100%;
    margin-left: auto;
  	margin-right: auto;
    padding-bottom: 6%;
}
/*-----WORK PAGE-----*/
.work-intro {
  width: 100%;
  /* background-color: #f9b6f1; */
  background-color: #000000;
  color: white;
  box-shadow: 0px 8px 10px hotpink, -10px 8px 15px hotpink, 10px 8px 15px hotpink, 0px -8px 10px hotpink;
  text-align: center;
  padding: 10px 0px 40px 0px;
}
.work-intro h1{
	font-family: 'Pinyon Script', cursive;
}
.pims, .amazon, .label-insight{
	color: #000000;
	padding: .25em 1.5em 1.5em;
	box-shadow: 0px 0px 10px rgba(141, 141, 139, .75);
  text-align: center;
}
.pims{
	/* background-color: #e0b6f9; */
  background-color: #000000;
  color: white;
	/* margin-top: 1.5em; */
  margin-top: 1em;
  margin-bottom: 2em;
  box-shadow: 0px 8px 10px hotpink, -10px 8px 15px hotpink, 10px 8px 15px hotpink, 0px -8px 10px hotpink;
}
.pims h2{
  font-weight: bold;
  padding-top: 1em;
  padding-bottom: 1em;
}
.pims p{
  padding-top: 1em;
}
.pims-img{
  background-size: contain;
  max-width: 500px;
  min-width: 5px;
  margin: auto;
  box-shadow: 0px 8px 10px gray, -10px 8px 15px gray, 10px 8px 15px gray;
}
.amazon{
	/* background-color: #f9b6f1; */
  background-color: #000000;
  color: white;
	margin-top: 1.5em;
	margin-bottom: 1em;
  box-shadow: 0px 8px 10px hotpink, -10px 8px 15px hotpink, 10px 8px 15px hotpink, 0px -8px 10px hotpink;
}
.amazon h2{
  font-weight: bold;
  padding-top: 1em;
  padding-bottom: 1em;
}
.amazon p{
  padding-top: 1em;
}
.amazon-img{
  background-size: contain;
  max-width: 500px;
  min-width: 5px;
  margin: auto;
  box-shadow: 0px 8px 10px gray, -10px 8px 15px gray, 10px 8px 15px gray;
}
.label-insight{
	/* background-color: #e0b6f9; */
  width: 100%;
  background-color: #000000;
  color: white;
	/* margin-top: 1em;
  margin-bottom: 2em; */
  margin-top: 1.5em;
  box-shadow: 0px 8px 10px hotpink, -10px 8px 15px hotpink, 10px 8px 15px hotpink, 0px -8px 10px hotpink;
}
.label-insight h2{
  font-weight: bold;
  padding-top: 1em;
  padding-bottom: 1em;
}
.label-insight p{
  padding-top: 1em;
}
.label-insight-img{
  background-size: contain;
  max-width: 500px;
  min-width: 5px;
  margin: auto;
  box-shadow: 0px 8px 10px gray, -10px 8px 15px gray, 10px 8px 15px gray;
}
.pims h3, .amazon h3, .label-insight h3{
	padding-bottom: 0;
	margin-bottom: .25em;
}

/*-----CRAFTS PAGE ------*/
.main-content-crafts{
	margin-top: 125px;
}
/*photo gallery*/
.crafts{
	display: block;
	margin: auto;
	max-width: 1200px;
  text-align: center;
}
.crafts h1{
  font-family: 'Pinyon Script', cursive;
	/* text-shadow: 2px 2px deeppink; */
  color: hotpink;
}
.photo-cell{
	margin-bottom: 2%;
	margin-left: 2%;
}
.photo-cell img {
	width: 98%;
  	display: block;
  	box-shadow: 0px 0px 10px rgba(141, 141, 139, .75);
}

/*-----CONTACT PAGE-----*/

